[package]
name = "rust_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha256 = "1.0.3"
sha2 = "0.10.0"
digest = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
